<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:textAlignment="center"
    tools:context=".activity.SearchActivity">


    <LinearLayout
        android:id="@+id/language_flag"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="38dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/english_language_background">

            <ImageView
                android:id="@+id/flag_img"
                android:layout_width="26dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/united_kingdom_flag"
                android:contentDescription="@string/flag_image" />

            <TextView
                android:id="@+id/flag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:letterSpacing="0.018"
                android:text="@string/english"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/flag_img"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.437" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/input_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_word_background"
        android:ems="15"
        android:fontFamily="@font/roboto_condensed_bold"
        android:hint="@string/type_word"
        android:textColor="@color/text_color"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/search_button_background"
        android:fontFamily="@font/roboto_condensed_bold"
        android:letterSpacing="0.018"
        android:text="@string/searchText"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_error_message"
        android:layout_width="298dp"
        android:layout_height="134dp"
        android:visibility="gone"

        android:background="@drawable/modal_error_background"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="100">

        <TextView
            android:id="@+id/text_view_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_message"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="30dp" />

        <Button
            android:id="@+id/error_message_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OK"
            tools:layout_editor_absoluteX="30dp"
            app:backgroundTint="@color/blue"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>