<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seven_days"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:id="@+id/L1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/girl_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="120dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/purchase_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.6"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="340dp"
                    android:src="@drawable/icon"
                    app:layout_constraintEnd_toEndOf="@id/girl_image"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@id/girl_image"
                    app:layout_constraintTop_toTopOf="@id/girl_image" />

                <ImageView
                    android:id="@+id/software_name_purchase_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="90dp"
                    android:contentDescription="@string/software_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img_icon"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/title"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/L2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0sp"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_condensed_bold"
                android:gravity="center"
                android:text="@string/purchase_subscribe_title"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subscribe_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"


                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:text="@string/purchase_subscribe_info"
                android:textAlignment="center"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/L3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/subscribe_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="27dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/search_button_background"
                android:fontFamily="@font/roboto_condensed_bold"
                android:letterSpacing="0.018"
                android:text="@string/subscribe_button"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
